kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: insurances-aggregation
  name: insurances-aggregation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insurances-aggregation
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: insurances-aggregation
    spec:
      containers:
      - image: actraiser/insurances-aggregation:1.0.0
        name: insurances-aggregation
        resources: {}
status: {}
