kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: fpnatools.com
      http:
        paths:
          - backend:
              service:
                name: insurances-aggregation
                port:
                  number: 9090
            path: /insurances-aggregation/(.*)
            pathType: Prefix
          - backend:
              service:
                name: authserver
                port:
                  number: 9091
            path: /authserver/(.*)
            pathType: Prefix
  tls:
    - hosts:
        - fpnatools.com
      secretName: insurances-aggregation-tls
